[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Kenney/Players/128x256/Pink/alienPink_stand.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/enemy/Poses/adventurer_walk2.png" type="Texture" id=3]
[ext_resource path="res://Assets/enemy/Poses/adventurer_idle.png" type="Texture" id=4]
[ext_resource path="res://Assets/enemy/Poses/adventurer_jump.png" type="Texture" id=5]
[ext_resource path="res://Assets/Kenney-Fonts/Fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/enemy/Poses/adventurer_walk1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Kenney-Fonts/Fonts/Kenney Mini Square Mono.ttf" type="DynamicFontData" id=8]

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "dur",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 3 ) ],
"loop": true,
"name": "yuru",
"speed": 10.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "zipla",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 25.3333
height = 37.3333

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 8 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 1.3, 1.3 )
z_index = 5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 2.66667, -9.33333 )
texture = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1.33333, -8 )
frames = SubResource( 10 )
animation = "yuru"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, 4 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.2, 1.2 )
drag_margin_h_enabled = true
smoothing_enabled = true
smoothing_speed = 4.0
drag_margin_left = 0.46
drag_margin_right = 0.42
drag_margin_bottom = 0.27
editor_draw_drag_margin = true

[node name="Skorumuz" type="Label" parent="."]
margin_left = -45.3333
margin_top = -121.333
margin_right = 48.6667
margin_bottom = -41.3333
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1

[node name="UI" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="GameOver" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="UI/GameOver"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="UI/GameOver/CenterContainer"]
margin_left = 212.0
margin_top = 100.0
margin_right = 812.0
margin_bottom = 500.0
rect_min_size = Vector2( 600, 400 )

[node name="HBoxContainer" type="HBoxContainer" parent="UI/GameOver/CenterContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOver/CenterContainer/Panel/HBoxContainer"]
margin_left = 129.0
margin_right = 471.0
margin_bottom = 400.0
rect_min_size = Vector2( 300, 0 )
custom_constants/separation = 40
alignment = 1

[node name="Label" type="Label" parent="UI/GameOver/CenterContainer/Panel/HBoxContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 342.0
margin_bottom = 114.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 4 )
text = "GAME OVER"
align = 1
valign = 1

[node name="Label2" type="Label" parent="UI/GameOver/CenterContainer/Panel/HBoxContainer/VBoxContainer"]
margin_top = 154.0
margin_right = 342.0
margin_bottom = 168.0
text = "Skorunuz : "
align = 1
valign = 1

[node name="btn_restart" type="Button" parent="UI/GameOver/CenterContainer/Panel/HBoxContainer/VBoxContainer"]
margin_top = 208.0
margin_right = 342.0
margin_bottom = 258.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 8 )
text = "YENIDEN DENE
"

[node name="btn_goToMenu" type="Button" parent="UI/GameOver/CenterContainer/Panel/HBoxContainer/VBoxContainer"]
margin_top = 298.0
margin_right = 342.0
margin_bottom = 348.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 9 )
text = "ANA MENU"

[node name="Finished" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="UI/Finished"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="UI/Finished/CenterContainer"]
margin_left = 212.0
margin_top = 100.0
margin_right = 812.0
margin_bottom = 500.0
rect_min_size = Vector2( 600, 400 )

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Finished/CenterContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Finished/CenterContainer/Panel/HBoxContainer"]
margin_left = 148.0
margin_right = 452.0
margin_bottom = 400.0
rect_min_size = Vector2( 300, 0 )
custom_constants/separation = 40
alignment = 1

[node name="Label" type="Label" parent="UI/Finished/CenterContainer/Panel/HBoxContainer/VBoxContainer"]
margin_top = 6.0
margin_right = 304.0
margin_bottom = 69.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 4 )
text = "FINISHED"
align = 1
valign = 1

[node name="Label2" type="Label" parent="UI/Finished/CenterContainer/Panel/HBoxContainer/VBoxContainer"]
margin_top = 154.0
margin_right = 342.0
margin_bottom = 168.0
text = "Skorunuz : "
align = 1
valign = 1

[node name="btn_next_level" type="Button" parent="UI/Finished/CenterContainer/Panel/HBoxContainer/VBoxContainer"]
margin_top = 163.0
margin_right = 304.0
margin_bottom = 213.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 5 )
text = "SIRADAKI LEVEL"

[node name="btn_restart" type="Button" parent="UI/Finished/CenterContainer/Panel/HBoxContainer/VBoxContainer"]
margin_top = 253.0
margin_right = 304.0
margin_bottom = 303.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 6 )
text = "YENIDEN DENE"

[node name="btn_goToMenu" type="Button" parent="UI/Finished/CenterContainer/Panel/HBoxContainer/VBoxContainer"]
margin_top = 343.0
margin_right = 304.0
margin_bottom = 393.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 7 )
text = "ANA MENU"

[connection signal="pressed" from="UI/GameOver/CenterContainer/Panel/HBoxContainer/VBoxContainer/btn_restart" to="." method="_on_btn_restart_pressed"]
[connection signal="pressed" from="UI/GameOver/CenterContainer/Panel/HBoxContainer/VBoxContainer/btn_goToMenu" to="." method="_on_btn_goToMenu_pressed"]
[connection signal="pressed" from="UI/Finished/CenterContainer/Panel/HBoxContainer/VBoxContainer/btn_next_level" to="." method="_on_btn_next_level_pressed"]
[connection signal="pressed" from="UI/Finished/CenterContainer/Panel/HBoxContainer/VBoxContainer/btn_restart" to="." method="_on_btn_restart_pressed"]
[connection signal="pressed" from="UI/Finished/CenterContainer/Panel/HBoxContainer/VBoxContainer/btn_goToMenu" to="." method="_on_btn_goToMenu_pressed"]
